--- a/ParticleSimulator.ipynb
+++ b/ParticleSimulator.ipynb
@@ -1,4 +1,20 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOTYtnzZhAaDY2dzqqruVo0",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -12,251 +28,52 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import time\n",
-        "import math\n",
-        "from IPython.display import clear_output\n",
-        "\n",
-        "class Particle:\n",
-        "    def __init__(self, x, y, vx, vy, index=0):\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
-        "        self.vx = vx\n",
-        "        self.vy = vy\n",
-        "        self.index = index\n",
-        "\n",
-        "    def move(self):\n",
-        "        self.x += self.vx\n",
-        "        self.y += self.vy\n",
-        "\n",
-        "class Simulator:\n",
-        "    def __init__(self, width, height, collision_radius=0.8):\n",
-        "        self.width = width\n",
-        "        self.height = height\n",
-        "        self.collision_radius = collision_radius\n",
-        "        self.square_radius = self.collision_radius**2\n",
-        "        self.particles = []\n",
-        "\n",
-        "    def add_particle(self, x, y, vx, vy):\n",
-        "        self.particles.append(Particle(x, y, vx, vy, len(self.particles)))\n",
-        "\n",
-        "    def simulate_step(self):\n",
-        "\n",
-        "        for p in self.particles:\n",
-        "            p.move()\n",
-        "\n",
-        "        for i, p1 in enumerate(self.particles):\n",
-        "            for p2 in self.particles[i+1:]:\n",
-        "                dx = p1.x - p2.x\n",
-        "                dy = p1.y - p2.y\n",
-        "                if dx*dx + dy*dy < self.square_radius:\n",
-        "                    p1.vx, p2.vx = p2.vx, p1.vx\n",
-        "                    p1.vy, p2.vy = p2.vy, p1.vy\n",
-        "                    return True\n",
-        "        return False\n",
-        "\n",
-        "class Visualizer:\n",
-        "    def __init__(self, width, height):\n",
-        "        self.width = width\n",
-        "        self.height = height\n",
-        "\n",
-        "    def create_matrix(self, particles):\n",
-        "        matrix = np.zeros((self.height, self.width), dtype=int)\n",
-        "        for p in particles:\n",
-        "            x, y = int(round(p.x)), int(round(p.y))\n",
-        "            if 0 <= x < self.width and 0 <= y < self.height:\n",
-        "                matrix[y, x] = p.index + 1\n",
-        "        return matrix\n",
-        "\n",
-        "    def print_matrix(self, matrix):\n",
-        "        for row in matrix:\n",
-        "            print(' '.join(map(str, row)))\n",
-        "\n",
-        "    def print_particles_info(self, particles):\n",
-        "        for p in particles:\n",
-        "            print(f\"Частица {p.index}: ({p.x:.1f}, {p.y:.1f}) v=({p.vx:.1f}, {p.vy:.1f})\")\n",
-        "\n",
-        "def main():\n",
-        "    width, height = 40, 3\n",
-        "    collision_radius = 3\n",
-        "\n",
-        "    sim = Simulator(width, height, collision_radius)\n",
-        "    vis = Visualizer(width, height)\n",
-        "\n",
-        "    sim.add_particle(0, 1, 1, 0)\n",
-        "    sim.add_particle(10, 1, 0.1, 0)\n",
-        "    sim.add_particle(20, 1, -1, 0)\n",
-        "    sim.add_particle(30, 1, -1, 0)\n",
-        "\n",
-        "    for step in range(30):\n",
-        "        clear_output(wait=True)\n",
-        "        matrix = vis.create_matrix(sim.particles)\n",
-        "        vis.print_matrix(matrix)\n",
-        "        vis.print_particles_info(sim.particles)\n",
-        "\n",
-        "        sim.simulate_step()\n",
-        "        time.sleep(0.1)\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()"
-      ],
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "R6Zz5kjes51h",
-        "outputId": "7698ac87-8f70-42e5-ae64-606ca8d0afa6"
+        "id": "z-uWQm2QVbOY",
+        "outputId": "5746eadc-6420-4e91-940b-90ad80f770e6"
       },
-      "execution_count": 233,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 4 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "Частица 0: (-13.0, 1.0) v=(-1.0, 0.0)\n",
-            "Частица 1: (-2.7, 1.0) v=(-1.0, 0.0)\n",
-            "Частица 2: (14.6, 1.0) v=(0.1, 0.0)\n",
-            "Частица 3: (35.0, 1.0) v=(1.0, 0.0)\n"
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · ● · ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · ● · ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · ● · · ● ● ● ● ● ● · ● ● · · · ● · · · · · · · · · · · · · · · ·\n",
+            "· · · ● · · · · · · · ● ● ● ● · · ● ● · · · ● · · · ● · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · ● · · ● ● · ● · ● · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · ● · · ● · ● ● · ● · · · · · · · · · · · ● · · · · · · · · · ·\n",
+            "· ● · · · · · · ● ● · · · · · ● ● · ● · ● · · · · · · ● · · · · · · · · · · · ·\n",
+            "· · · · · · · · ● · · ● ● ● · · ● ● · ● · · ● · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import time\n",
-        "import random\n",
-        "from IPython.display import clear_output\n",
-        "\n",
-        "class Particle:\n",
-        "    def __init__(self, x, y, vx, vy, index=0):\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
-        "        self.vx = vx\n",
-        "        self.vy = vy\n",
-        "        self.index = index\n",
-        "\n",
-        "    def move(self):\n",
-        "        self.x += self.vx\n",
-        "        self.y += self.vy\n",
-        "\n",
-        "    def add_random_velocity(self, max_change):\n",
-        "        self.vx += random.uniform(-max_change, max_change)\n",
-        "        self.vy += random.uniform(-max_change, max_change)\n",
-        "\n",
-        "class Simulator:\n",
-        "    def __init__(self, width, height, collision_radius=0.8, velocity_change=0.001):\n",
-        "        self.width = width\n",
-        "        self.height = height\n",
-        "        self.collision_radius = collision_radius\n",
-        "        self.velocity_change = velocity_change\n",
-        "        self.square_radius = self.collision_radius**2\n",
-        "        self.particles = []\n",
-        "\n",
-        "    def add_particle(self, x, y, vx, vy):\n",
-        "        self.particles.append(Particle(x, y, vx, vy, len(self.particles)))\n",
-        "\n",
-        "    def simulate_step(self):\n",
-        "        for p in self.particles:\n",
-        "            p.move()\n",
-        "\n",
-        "        for i, p1 in enumerate(self.particles):\n",
-        "            for p2 in self.particles[i+1:]:\n",
-        "                dx = p1.x - p2.x\n",
-        "                dy = p1.y - p2.y\n",
-        "                if dx*dx + dy*dy < self.square_radius:\n",
-        "                    p1.vx, p2.vx = p2.vx, p1.vx\n",
-        "                    p1.vy, p2.vy = p2.vy, p1.vy\n",
-        "\n",
-        "        for p in self.particles:\n",
-        "            p.add_random_velocity(self.velocity_change)\n",
-        "\n",
-        "class Visualizer:\n",
-        "    def __init__(self, width, height):\n",
-        "        self.width = width\n",
-        "        self.height = height\n",
-        "\n",
-        "    def create_matrix(self, particles):\n",
-        "        matrix = np.zeros((self.height, self.width), dtype=int)\n",
-        "        for p in particles:\n",
-        "            x, y = int(round(p.x)), int(round(p.y))\n",
-        "            if 0 <= x < self.width and 0 <= y < self.height:\n",
-        "                matrix[y, x] = p.index + 1\n",
-        "        return matrix\n",
-        "\n",
-        "    def print_matrix(self, matrix):\n",
-        "        for row in matrix:\n",
-        "            print(' '.join(map(str, row)))\n",
-        "\n",
-        "    def print_particles_info(self, particles):\n",
-        "        for p in particles:\n",
-        "            print(f\"Частица {p.index}: ({p.x:.1f}, {p.y:.1f}) v=({p.vx:.1f}, {p.vy:.1f})\")\n",
-        "\n",
-        "def main():\n",
-        "    width, height = 40, 10\n",
-        "    collision_radius = 1\n",
-        "    velocity_change = 0.005\n",
-        "\n",
-        "    sim = Simulator(width, height, collision_radius, velocity_change)\n",
-        "    vis = Visualizer(width, height)\n",
-        "\n",
-        "    for i in range(10, 20, 3):\n",
-        "        sim.add_particle(i, height//2, 0, 0)\n",
-        "\n",
-        "    sim.add_particle(30, height//2, -1, 0)\n",
-        "\n",
-        "    for step in range(30):\n",
-        "        clear_output(wait=True)\n",
-        "        matrix = vis.create_matrix(sim.particles)\n",
-        "        vis.print_matrix(matrix)\n",
-        "        vis.print_particles_info(sim.particles)\n",
-        "\n",
-        "        collision = sim.simulate_step()\n",
-        "\n",
-        "        time.sleep(0.1)\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()"
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eI9sypJPIfdh",
-        "outputId": "c500fe5b-ab97-45ff-e9f6-17a8da38d32f"
-      },
-      "execution_count": 229,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 2 0 0 3 0 0 0 0 4 0 5 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            "Частица 0: (-1.2, 4.7) v=(-1.0, -0.0)\n",
-            "Частица 1: (10.0, 5.0) v=(0.0, 0.0)\n",
-            "Частица 2: (13.0, 5.2) v=(-0.0, 0.0)\n",
-            "Частица 3: (17.6, 4.8) v=(0.0, -0.0)\n",
-            "Частица 4: (20.2, 4.6) v=(0.0, -0.0)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "import time\n",
@@ -328,16 +145,7 @@
         "                matrix[y, x] = p.index + 1\n",
         "        return matrix\n",
         "\n",
-        "    def print_matrix(self, matrix):\n",
-        "        for row in matrix:\n",
-        "            for cell in row:\n",
-        "                if cell > 0:\n",
-        "                    print('●', end=' ')\n",
-        "                else:\n",
-        "                    print('·', end=' ')\n",
-        "            print()\n",
-        "\n",
-        "    def print_enhanced_matrix(self, particles):\n",
+        "    def print_matrix(self, particles):\n",
         "        display_matrix = [['·' for _ in range(self.width)] for _ in range(self.height)]\n",
         "\n",
         "        for p in particles:\n",
@@ -347,10 +155,6 @@
         "\n",
         "        for row in display_matrix:\n",
         "            print(' '.join(row))\n",
-        "\n",
-        "    def print_particles_info(self, particles):\n",
-        "        for p in particles:\n",
-        "            print(f\"Частица {p.index}: ({p.x:.1f}, {p.y:.1f}) v=({p.vx:.1f}, {p.vy:.1f}) m={p.mass:.1f}\")\n",
         "\n",
         "def main():\n",
         "    width, height = 40, 30\n",
@@ -367,79 +171,16 @@
         "\n",
         "    sim.add_particle(30, height//2, -1, 0, mass=1000.0)\n",
         "\n",
-        "    for step in range(30):\n",
+        "    for step in range(50):\n",
         "        clear_output(wait=True)\n",
-        "        vis.print_enhanced_matrix(sim.particles)\n",
-        "        # vis.print_particles_info(sim.particles)\n",
+        "        vis.print_matrix(sim.particles)\n",
         "        collision = sim.simulate_step()\n",
         "\n",
         "        time.sleep(0.05)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dH03FEPlQBE6",
-        "outputId": "f571b40d-0842-4be9-dcdf-0f0dc3e96e30"
-      },
-      "execution_count": 353,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · ● · ● ● ● ● ● ● ● ● · ● · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · ● · · ● ● ● ● · ● · · ● ● ● · · · · · · ● · · · · · · · · · · · ·\n",
-            "· · · · ● · · · · · · ● · · · · · ● ● · · · · ● · · · · · · · · · · · · · · · ·\n",
-            "● ● · · · · ● · ● ● · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · ● · · · · · · ● · · ● · ● ● · ● ● · · · · · ● · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● · ● · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n"
-          ]
-        }
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMeTcmOnOIpiqMbPg1kOX0r",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
