--- a/ParticleSimulator.ipynb
+++ b/ParticleSimulator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMShSrjpK8HCmRgJBxrfOET",
+      "authorship_tag": "ABX9TyMPLTSkjRSgbfea1hoTkWR7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,7 @@
       "cell_type": "code",
       "source": [
         "import time\n",
+        "import random\n",
         "from IPython.display import clear_output\n",
         "\n",
         "class Particle:\n",
@@ -48,19 +49,30 @@
         "        self.width = width\n",
         "        self.height = height\n",
         "        self.particles = []\n",
+        "        self.rectangles = []\n",
         "\n",
         "    def add_particle(self, x, y, vx, vy):\n",
         "        self.particles.append(Particle(x, y, vx, vy))\n",
         "\n",
-        "    def add_square(self, left, top, size):\n",
-        "        for i in range(left, left + size):\n",
-        "            self.add_particle(i, top, -1, 0)\n",
-        "        for i in range(top, top + size):\n",
-        "            self.add_particle(left + size - 1, i, -1, 0)\n",
-        "        for i in range(left, left + size):\n",
-        "            self.add_particle(i, top + size - 1, -1, 0)\n",
-        "        for i in range(top, top + size):\n",
-        "            self.add_particle(left, i, -1, 0)\n",
+        "    def add_rectangle(self, left, top, width, height, min_vx, max_vx, min_vy, max_vy):\n",
+        "        self.rectangles.append((left, top, width, height))\n",
+        "\n",
+        "        for x in range(left, left + width):\n",
+        "            for y in range(top, top + height):\n",
+        "                self.add_particle(x, y, random.uniform(min_vx, max_vx), random.uniform(min_vy, max_vy))\n",
+        "\n",
+        "    def fill_space_around_rectangles(self, density, min_vx, max_vx, min_vy, max_vy):\n",
+        "        for x in range(self.width):\n",
+        "            for y in range(self.height):\n",
+        "                inside_rectangle = False\n",
+        "                for rect in self.rectangles:\n",
+        "                    left, top, width, height = rect\n",
+        "                    if left <= x < left + width and top <= y < top + height:\n",
+        "                        inside_rectangle = True\n",
+        "                        break\n",
+        "\n",
+        "                if not inside_rectangle and random.random() < density:\n",
+        "                    self.add_particle(x, y, random.uniform(min_vx, max_vx), random.uniform(min_vy, max_vy))\n",
         "\n",
         "    def simulate_step(self):\n",
         "        for p in self.particles:\n",
@@ -70,7 +82,7 @@
         "            for p2 in self.particles[i+1:]:\n",
         "                dx = p1.x - p2.x\n",
         "                dy = p1.y - p2.y\n",
-        "                if dx*dx + dy*dy < 1:\n",
+        "                if dx*dx + dy*dy < 0.001:\n",
         "                    p1.vx, p2.vx = p2.vx, p1.vx\n",
         "                    p1.vy, p2.vy = p2.vy, p1.vy\n",
         "\n",
@@ -85,26 +97,21 @@
         "    print('\\n'.join(' '.join(row) for row in display))\n",
         "\n",
         "def main():\n",
-        "    width, height = 40, 20\n",
+        "    width, height = 50, 50\n",
         "    sim = Simulator(width, height)\n",
         "\n",
-        "    sim.add_square(30, 7, 6)\n",
+        "    sim.add_rectangle(left=20, top=30, width=10, height=10, min_vx=-10, max_vx=10, min_vy=-10, max_vy=10)\n",
+        "    sim.add_rectangle(left=20, top=15, width=10, height=10, min_vx=-0.1, max_vx=0.1, min_vy=-0.1, max_vy=0.1)\n",
         "\n",
-        "    sim.add_particle(0, 6, 1, 0)\n",
-        "    sim.add_particle(0, 7, 1, 0)\n",
-        "    sim.add_particle(0, 8, 1, 0)\n",
-        "    sim.add_particle(0, 9, 1, 0)\n",
-        "    sim.add_particle(0, 10, 1, 0)\n",
-        "    sim.add_particle(0, 11, 1, 0)\n",
-        "    sim.add_particle(0, 12, 1, 0)\n",
-        "    sim.add_particle(0, 13, 1, 0)\n",
+        "    sim.fill_space_around_rectangles(density=1, min_vx=-0.001, max_vx=0.001, min_vy=-0.001, max_vy=0.001)\n",
         "\n",
         "    try:\n",
-        "        for step in range(30):\n",
+        "        for step in range(1000):\n",
         "            clear_output(wait=True)\n",
+        "            print(f\"Шаг: {step + 1}\")\n",
         "            print_particles(sim.particles, width, height)\n",
         "            sim.simulate_step()\n",
-        "            time.sleep(0.2)\n",
+        "            time.sleep(0.1)\n",
         "    except KeyboardInterrupt:\n",
         "        print(\"\\nСимуляция остановлена\")\n",
         "\n",
@@ -115,35 +122,68 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "PuGb24q8e2IH",
-        "outputId": "4ce29053-6e53-41d7-8702-db8caf191fe2"
+        "id": "w4a9v5iA51i4",
+        "outputId": "4177bded-6803-42b0-ba25-0ccc3ad7be57"
       },
-      "execution_count": 422,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· ● · · · · ● · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· ● · · · · ● · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· ● · · · · ● · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· ● · · · · ● · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· ● ● ● ● ● ● · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · ● · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n",
-            "· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·\n"
+            "Шаг: 14\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · · · · · · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● ● ● ● ● · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● · ● ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● ● ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · ● · ● · · ● ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
+            "\n",
+            "Симуляция остановлена\n"
           ]
         }
       ]
