--- a/ParticleSimulator.ipynb
+++ b/ParticleSimulator.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPLTSkjRSgbfea1hoTkWR7",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyM58GMEfT37fwMiHQM+HCW8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,6 +33,7 @@
       "source": [
         "import time\n",
         "import random\n",
+        "import multiprocessing as mp\n",
         "from IPython.display import clear_output\n",
         "\n",
         "class Particle:\n",
@@ -82,7 +85,7 @@
         "            for p2 in self.particles[i+1:]:\n",
         "                dx = p1.x - p2.x\n",
         "                dy = p1.y - p2.y\n",
-        "                if dx*dx + dy*dy < 0.001:\n",
+        "                if dx*dx + dy*dy < 0.1:\n",
         "                    p1.vx, p2.vx = p2.vx, p1.vx\n",
         "                    p1.vy, p2.vy = p2.vy, p1.vy\n",
         "\n",
@@ -96,24 +99,57 @@
         "\n",
         "    print('\\n'.join(' '.join(row) for row in display))\n",
         "\n",
-        "def main():\n",
-        "    width, height = 50, 50\n",
+        "def simulation_process(queue, width, height):\n",
         "    sim = Simulator(width, height)\n",
         "\n",
-        "    sim.add_rectangle(left=20, top=30, width=10, height=10, min_vx=-10, max_vx=10, min_vy=-10, max_vy=10)\n",
-        "    sim.add_rectangle(left=20, top=15, width=10, height=10, min_vx=-0.1, max_vx=0.1, min_vy=-0.1, max_vy=0.1)\n",
+        "    sim.add_rectangle(left=3, top=12, width=15, height=5, min_vx=-0.1, max_vx=0.1, min_vy=-0.1, max_vy=0.1)\n",
+        "    sim.add_rectangle(left=3, top=6, width=15, height=5, min_vx=-0.01, max_vx=0.01, min_vy=-0.01, max_vy=0.01)\n",
         "\n",
-        "    sim.fill_space_around_rectangles(density=1, min_vx=-0.001, max_vx=0.001, min_vy=-0.001, max_vy=0.001)\n",
+        "    # sim.fill_space_around_rectangles(density=1, min_vx=-0.0001, max_vx=0.0001, min_vy=-0.0001, max_vy=0.0001)\n",
         "\n",
         "    try:\n",
         "        for step in range(1000):\n",
-        "            clear_output(wait=True)\n",
-        "            print(f\"Шаг: {step + 1}\")\n",
-        "            print_particles(sim.particles, width, height)\n",
+        "            particle_data = [(p.x, p.y, p.vx, p.vy) for p in sim.particles]\n",
+        "            queue.put(particle_data)\n",
         "            sim.simulate_step()\n",
         "            time.sleep(0.1)\n",
         "    except KeyboardInterrupt:\n",
-        "        print(\"\\nСимуляция остановлена\")\n",
+        "        print(\"\\nОстановка симуляции...\")\n",
+        "    finally:\n",
+        "        queue.put(None)\n",
+        "\n",
+        "def display_process(queue, width, height):\n",
+        "    while True:\n",
+        "        if not queue.empty():\n",
+        "            clear_output(wait=True)\n",
+        "            particle_data = queue.get()\n",
+        "            if particle_data is None:\n",
+        "                break\n",
+        "\n",
+        "            particles = [Particle(x, y, vx, vy) for x, y, vx, vy in particle_data]\n",
+        "\n",
+        "\n",
+        "            print_particles(particles, width, height)\n",
+        "\n",
+        "def main():\n",
+        "    width, height = 20, 20\n",
+        "\n",
+        "    queue = mp.Queue()\n",
+        "\n",
+        "    sim_process = mp.Process(target=simulation_process, args=(queue, width, height))\n",
+        "    display_proc = mp.Process(target=display_process, args=(queue, width, height))\n",
+        "\n",
+        "    try:\n",
+        "        sim_process.start()\n",
+        "        display_proc.start()\n",
+        "        sim_process.join()\n",
+        "        display_proc.join()\n",
+        "\n",
+        "    except KeyboardInterrupt:\n",
+        "        sim_process.terminate()\n",
+        "        display_proc.terminate()\n",
+        "        sim_process.join()\n",
+        "        display_proc.join()\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
@@ -122,68 +158,35 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "w4a9v5iA51i4",
-        "outputId": "4177bded-6803-42b0-ba25-0ccc3ad7be57"
+        "id": "4QSi-ogFDaYu",
+        "outputId": "6893ee2a-f0a5-48c2-8fe0-c0fdcf56f99c"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Шаг: 14\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · · · · · · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● ● ● ● ● · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● · ● ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● ● ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · ● · ● ● · ● · ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · ● · ● · · ● ● · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● · · · · · · · · · · ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●\n",
-            "\n",
-            "Симуляция остановлена\n"
+            "· · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · · · · · · · · · · · · · · ·\n",
+            "· · · · · · ● · · · · · · · · · ● · · ·\n",
+            "· · · · · · · · · · · · · · · · ● · · ·\n",
+            "· · · · · · · · · · · ● · · · · · · · ·\n",
+            "· · · ● · ● ● · ● ● ● · ● ● ● · ● ● · ·\n",
+            "· · · ● · ● ● ● ● ● ● ● ● ● · ● ● ● · ·\n",
+            "· · ● · ● · ● ● ● ● · ● · · ● ● ● · · ●\n",
+            "· · · · ● ● ● ● · ● ● ● ● ● ● · ● ● · ·\n",
+            "· · · ● ● ● ● ● · ● · ● ● ● ● · ● · ● ·\n",
+            "· · · · · · · ● ● · · · · · ● ● · · · ·\n",
+            "· · · · · · · · · ● · ● ● · · · · · · ·\n",
+            "· · · · · ● ● · ● · · · · · · ● · · · ·\n",
+            "● ● ● ● · · · · · · · · · · · · · · ● ·\n",
+            "· · · · · · ● · · · · · · · · · · · · ·\n",
+            "· · ● · · · ● · · · · · ● · · · ● · · ·\n",
+            "· · ● · ● · · · · · · · · · · · · · · ●\n",
+            "· · · · · · ● · · ● · ● · · · · · · ● ·\n",
+            "· ● · · · · · ● · ● · · · · · · · · · ·\n"
           ]
         }
       ]
